--- a/agreement/templates/agreement/home.html
+++ b/agreement/templates/agreement/home.html
@@ -1,6 +1,7 @@
 <h3>{{ page_header }}</h3>
 <br>
-<h4><a href="/admin/">Go to Admin panel</a></h4>
+<h4><a href='/admin/'>Go to Admin panel</a></h4>
+<br>
 <h4>Username: admin</h4>
 <h4>Password: qwertyuiop</h4>
 <br>
